# DFT_solver

./: CMakeLists.txt  README.md
include/dft/: eigensolver.hpp  grid.hpp  hamiltonian.hpp  io.hpp  parallel.hpp  potential.hpp  scf.hpp  units.hpp
src/: main.cpp
